Table#2 - new changes

--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
             <tr>
                 <th rowspan="2"></th>
                 <th colspan="6">UBRANIA</th>
-                <th></th>
+                <th rowspan="2">RABAT</th>
             </tr>
             <tr>
                 <th colspan="3">SPODNIE</th>
                 <th colspan="3">KOSZULE</th>
-                <th>RABAT</th>
             </tr>
         </thead>
         <tbody>
-                <tr>
+            <tr>
                 <td>Mężczyźni</td>
                 <td>48</td>
                 <td>50</td>
