--- a/mailing.html
+++ b/mailing.html
@@ -1,23 +1,176 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="padding: 0;margin: 0;">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body style="padding: 0;margin: 0;">
-    <table
-    width="600"
+    <!-- <table
+    width="600px"
     border="0"
     cellspacing="0"
     cellpading="0"
-    style="background-color: #FFF;"
+    style="background-color: #FFF;display: block;max-width: 600px;"
     align="center";
     >
-        <tr>
-            <img src="logos.jpg" alt="Logo" height="94px" width="600px" style="border: 0;display: block;">
-        </tr>
+        <thead style="padding: 0;margin: 0;max-width: 600px;max-height: 94px;display: block;">
+            <tr style="padding: 0;margin: 0;max-width: 600px;max-height: 94px;display: block;">
+                <td style="padding: 0;margin: 0;max-width: 600px;max-height: 94px;display: block;">                
+                    <img src="logos.jpg" alt="Logo" height="94px" width="600px" style="border: 0;display: block;margin: 0;"/>
+                </td>
+            </tr>
+        </thead>
+        <tbody style="padding: 0;margin: 0;max-width: 600px;max-height: 94px;display: block;">
+            <tr height="393" bgcolor="#2d3e87" style="padding: 0;margin: 0;max-width: 600px;max-height: 393px;display: block;">
+                <td>
+                    <table width="600"
+                    border="0"
+                    cellspacing="0"
+                    cellpading="0">
+                        <tr>
+                            <td>
+                                Hej
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </tbody>
+    </table> -->
+    <table
+    width="600px"
+    border="0"
+    cellspacing="0"
+    cellpading="0"
+    style="background-color: #FFF;display: block;max-width: 600px;"
+    align="center">
+        <thead style="padding: 0;margin: 0;max-width: 600px;max-height: 94px;display: block;">
+            <tr style="padding: 0;margin: 0;max-width: 600px;max-height: 94px;display: block;">
+                <td style="padding: 0;margin: 0;max-width: 600px;max-height: 94px;display: block;">                
+                    <img src="logos.jpg" alt="Logo" height="94px" width="600px" style="border: 0;display: block;margin: 0;"/>
+                </td>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td colspan="6"></td>
+                <td colspan="3" rowspan="5"></td>
+            </tr>
+            <tr>
+                <td rowspan="11"></td>
+                <td colspan="5"></td>
+            </tr>
+            <tr>
+                <td colspan="5"></td>
+            </tr>
+            <tr>
+                <td colspan="5" rowspan="2"></td>
+            </tr>
+            <tr>
+            </tr>
+            <tr>
+                <td colspan="8"></td>
+            </tr>
+            <tr>
+                <td colspan="8"></td>
+            </tr>
+            <tr>
+                <td rowspan="2"></td>
+                <td colspan="4"></td>
+                <td colspan="2"></td>
+                <td rowspan="4"></td>
+            </tr>
+            <tr>
+                <td colspan="4"></td>
+                <td colspan="2" rowspan="2"></td>
+            </tr>
+            <tr>
+                <td colspan="5"></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td colspan="4"></td>
+                <td colspan="2"></td>
+            </tr>
+            <tr>
+                <td colspan="8"></td>
+            </tr>
+            <tr>
+                <td colspan="2" rowspan="11"></td>
+                <td colspan="5"></td>
+                <td colspan="2" rowspan="11"></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td rowspan="2"></td>
+                <td></td>
+                <td rowspan="2"></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td colspan="5"></td>
+            </tr>
+            <tr>
+                <td colspan="5"></td>
+            </tr>
+            <tr>
+                <td colspan="5"></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td colspan="4"></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td rowspan="3"></td>
+                <td colspan="3"></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td rowspan="2"></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td colspan="5"></td>
+            </tr>
+            <tr>
+                <td colspan="3" rowspan="5"></td>
+                <td colspan="3"></td>
+                <td colspan="3" rowspan="5"></td>
+            </tr>
+            <tr>
+                <td colspan="3"></td>
+            </tr>
+            <tr>
+                <td colspan="3"></td>
+            </tr>
+            <tr>
+                <td colspan="3"></td>
+            </tr>
+            <tr>
+                <td colspan="3"></td>
+            </tr>
+            <tr>
+                <td colspan="3" rowspan="2"></td>
+                <td colspan="3"></td>
+                <td colspan="3" rowspan="2"></td>
+            </tr>
+            <tr>
+                <td colspan="3"></td>
+            </tr>
+        </tbody>
     </table>
 </body>
 </html>
