--- a/mailing.html
+++ b/mailing.html
@@ -4,40 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        table{
+            border-collapse: collapse;
+            border: 1px solid;
+        }
+        td,tr{
+            border: 3px solid;
+        }
+    </style>
 </head>
-<body style="padding: 0;margin: 0;">
-    <!-- <table
-    width="600px"
-    border="0"
-    cellspacing="0"
-    cellpading="0"
-    style="background-color: #FFF;display: block;max-width: 600px;"
-    align="center";
-    >
-        <thead style="padding: 0;margin: 0;max-width: 600px;max-height: 94px;display: block;">
-            <tr style="padding: 0;margin: 0;max-width: 600px;max-height: 94px;display: block;">
-                <td style="padding: 0;margin: 0;max-width: 600px;max-height: 94px;display: block;">                
-                    <img src="logos.jpg" alt="Logo" height="94px" width="600px" style="border: 0;display: block;margin: 0;"/>
-                </td>
-            </tr>
-        </thead>
-        <tbody style="padding: 0;margin: 0;max-width: 600px;max-height: 94px;display: block;">
-            <tr height="393" bgcolor="#2d3e87" style="padding: 0;margin: 0;max-width: 600px;max-height: 393px;display: block;">
-                <td>
-                    <table width="600"
-                    border="0"
-                    cellspacing="0"
-                    cellpading="0">
-                        <tr>
-                            <td>
-                                Hej
-                            </td>
-                        </tr>
-                    </table>
-                </td>
-            </tr>
-        </tbody>
-    </table> -->
+<body style="padding: 0;margin: 0;font-family: calibri;">
     <table
     width="600px"
     border="0"
@@ -52,37 +29,52 @@
                 </td>
             </tr>
         </thead>
-        <tbody>
-            <tr>
-                <td colspan="6"></td>
-                <td colspan="3" rowspan="5"></td>
+        <tbody bgcolor="#2d3e87" style="padding: 0;margin: 0;max-width: 600px;">
+            <tr height="56px" width="600px" style="padding: 0;margin: 0;max-width: 600px;">
+                <td colspan="6" width="328">&nbsp;</td>
+                <td colspan="3" rowspan="4" height="209px" width="228px" valign="top">
+                    <img src="arrows_bg.jpg" alt="Kliknij aby pobrać zdjecie" height="209px" width="272px" style="border: 0;display: block;margin: 0;"/>
+                </td>
             </tr>
-            <tr>
-                <td rowspan="11"></td>
+            <tr height="19px">
+                <td rowspan="10" width="45px" height="337px">&nbsp;</td>
+                <td colspan="5" height="19px"><span style="font-size: 16px;color: #289DD8;">LIVE FREE WEBINAR</span></td>
+            </tr>
+            <tr height="15">
                 <td colspan="5"></td>
             </tr>
-            <tr>
-                <td colspan="5"></td>
+            <tr height="134px">
+                <td colspan="5" rowspan="1" valign="top" height="134px">
+                    <span style="font-size: 27px;font-weight: bold;color: #FFF;">10 the most important tips in upgrading your corporate SITECORE system</span>
+                </td>
             </tr>
             <tr>
-                <td colspan="5" rowspan="2"></td>
+                <td colspan="8">
+                    <span style="font-size: 16px;font-weight: lighter;color: #FFF;">Are you thinking about Sitecore Upgrading?<br> Do you want to do it correctly and safely? Join our webinar!</span>
+                </td>
+            </tr>
+            <tr height="26px">
+                <td colspan="8">&nbsp;</td>
             </tr>
             <tr>
-            </tr>
-            <tr>
-                <td colspan="8"></td>
-            </tr>
-            <tr>
-                <td colspan="8"></td>
-            </tr>
-            <tr>
-                <td rowspan="2"></td>
-                <td colspan="4"></td>
-                <td colspan="2"></td>
+                <td rowspan="2" width="22px">
+                    <img src="Icon feather-calendar@2x.png" alt="Kliknij aby pobrać zdjecie" height="22px" width="22px" style="border: 0;display: block;margin: 0;"/>
+                </td>
+                <td colspan="4" style="font-size: 16px;font-weight: lighter;color: #FFF;">
+                    <span>
+                        On Thursday,
+                    </span>
+                </td>
+                <td colspan="2">
+                </td>
                 <td rowspan="4"></td>
             </tr>
             <tr>
-                <td colspan="4"></td>
+                <td colspan="4" style="font-size: 16px;font-weight: lighter;color: #FFF;">
+                    <span>
+                        October 14, 2021 | 11am PT (?)
+                    </span>
+                </td>
                 <td colspan="2" rowspan="2"></td>
             </tr>
             <tr>
