--- a/mailing.html
+++ b/mailing.html
@@ -37,7 +37,7 @@
                 </td>
             </tr>
             <tr height="19px">
-                <td rowspan="10" width="45px" height="337px">&nbsp;</td>
+                <td rowspan="9" width="45px" height="337px">&nbsp;</td>
                 <td colspan="5" height="19px"><span style="font-size: 16px;color: #289DD8;">LIVE FREE WEBINAR</span></td>
             </tr>
             <tr height="15">
@@ -60,49 +60,59 @@
                 <td rowspan="2" width="22px">
                     <img src="Icon feather-calendar@2x.png" alt="Kliknij aby pobrać zdjecie" height="22px" width="22px" style="border: 0;display: block;margin: 0;"/>
                 </td>
-                <td colspan="4" style="font-size: 16px;font-weight: lighter;color: #FFF;">
-                    <span>
+                <td colspan="4" valign="bottom">
+                    <span style="font-size: 16px;font-weight: lighter;color: #FFF;">
                         On Thursday,
                     </span>
                 </td>
-                <td colspan="2">
-                </td>
-                <td rowspan="4"></td>
+                <td colspan="2">&nbsp;</td>
+                <td rowspan="4">&nbsp;</td>
             </tr>
             <tr>
-                <td colspan="4" style="font-size: 16px;font-weight: lighter;color: #FFF;">
-                    <span>
+                <td colspan="4" valign="top">
+                    <span style="font-size: 16px;font-weight: lighter;color: #FFF;">
                         October 14, 2021 | 11am PT (?)
                     </span>
                 </td>
-                <td colspan="2" rowspan="2"></td>
+                <td colspan="2" rowspan="2">
+                    <a href="#" target="_blank"><img src="Group 2392@2x.png" alt="Kliknij aby pobrać zdjecie" height="51px" width="220px" style="border: 0;display: block;margin: 0;"/></a>
+                </td>
             </tr>
             <tr>
-                <td colspan="5"></td>
+                <td>
+                    <img src="Icon feather-clock@2x.png" alt="Kliknij aby pobrać zdjecie" height="22px" width="22px" style="border: 0;display: block;margin: 0;"/>
+                </td>
+                <td colspan="4">
+                    <span style="font-size: 16px;font-weight: lighter;color: #FFF;">Approximately 60 minutes (?)</span>
+                </td>
             </tr>
             <tr>
-                <td></td>
-                <td colspan="4"></td>
+                <td colspan="8" height="45px">&nbsp;</td>
+            </tr>
+            <!-- white -->
+        </tbody>
+        <tbody bgcolor="#FFF" style="padding: 0;margin: 0;max-width: 600px;">
+            <tr>
+                <td colspan="2" rowspan="11" width="45px">&nbsp;</td>
+                <td colspan="5" height="45px"></td>
+                <td colspan="2" rowspan="11" width="41px">&nbsp;</td>
+            </tr>
+            <tr>
+                <td colspan="2" width="150px">
+                    <span style="font-size: 27px;font-weight: bold;color: black;">
+                        During our<br> webinar you<br> will learn
+                    </span>
+                </td>
+                <td align="center" width="160px">
+                    <img src="Group 2390@2x.png" alt="Kliknij aby pobrać zdjecie" height="70px" width="70px" style="border: 0;display: block;margin: 0;"/>
+                </td>
+                <td rowspan="2" width="19px"></td>
+                <td align="center" width="160px">
+                    <img src="Group 2391@2x.png" alt="Kliknij aby pobrać zdjecie" height="70px" width="70px" style="border: 0;display: block;margin: 0;"/>
+                </td>
+            </tr>
+            <tr>
                 <td colspan="2"></td>
-            </tr>
-            <tr>
-                <td colspan="8"></td>
-            </tr>
-            <tr>
-                <td colspan="2" rowspan="11"></td>
-                <td colspan="5"></td>
-                <td colspan="2" rowspan="11"></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td rowspan="2"></td>
-                <td></td>
-                <td rowspan="2"></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
                 <td></td>
             </tr>
             <tr>
