Mailing - last change

--- a/mailing.html
+++ b/mailing.html
@@ -11,7 +11,7 @@
     border="0"
     cellspacing="0"
     cellpading="0"
-    style="background-color: #FFF;display: block;max-width: 600px;/*table-layout: fixed;*/"
+    style="background-color: #FFF;display: block;max-width: 600px;table-layout: fixed;"
     align="center">
         <thead style="padding: 0;margin: 0;max-width: 600px;max-height: 94px;display: block;">
             <tr style="padding: 0;margin: 0;max-width: 600px;max-height: 94px;display: block;">
@@ -29,19 +29,27 @@
             </tr>
             <tr height="19px">
                 <td rowspan="9" width="45px" height="337px">&nbsp;</td>
-                <td colspan="5" height="19px"><span style="font-size: 16px;color: #289DD8;">LIVE FREE WEBINAR</span></td>
+                <td colspan="5" height="19px">
+                    <span style="font-size: 16px;color: #289DD8;">
+                        LIVE FREE WEBINAR
+                    </span></td>
             </tr>
             <tr height="15">
                 <td colspan="5"></td>
             </tr>
             <tr height="134px">
-                <td colspan="5" rowspan="1" valign="top" height="134px">
-                    <span style="font-size: 27px;font-weight: bold;color: #FFF;">10 the most important tips in upgrading your corporate SITECORE system</span>
+                <td colspan="5" rowspan="1" valign="top" height="150px">
+                    <span style="font-size: 27px;font-weight: bold;color: #FFF;">
+                        10 the most important tips in upgrading your corporate SITECORE system
+                    </span>
                 </td>
             </tr>
             <tr>
                 <td colspan="8">
-                    <span style="font-size: 16px;font-weight: lighter;color: #FFF;">Are you thinking about Sitecore Upgrading?<br> Do you want to do it correctly and safely? Join our webinar!</span>
+                    <span style="font-size: 16px;font-weight: lighter;color: #FFF;">
+                        Are you thinking about Sitecore Upgrading?<br> 
+                        Do you want to do it correctly and safely? Join our webinar!
+                    </span>
                 </td>
             </tr>
             <tr height="26px">
@@ -202,10 +210,11 @@
                     </a>
                 </td>
             </tr>
-            <tr>
+            <tr height="46px">
                 <td colspan="3">&nbsp;</td>
             </tr>
         </tbody>
+        <!-- footer -->
         <tfoot>
             <tr height="20px">
                 <td colspan="3" rowspan="2" width="60px">&nbsp;</td>
