--- a/index.html
+++ b/index.html
@@ -1,56 +1,232 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html lang="en" style="padding: 0;margin: 0;">
 <head>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
-    <table>
-        <caption>OFERTA ODZIEŻOWA</caption>
-        <thead>
-            <tr>
-                <th rowspan="2"></th>
-                <th colspan="6">UBRANIA</th>
-                <th rowspan="2">RABAT</th>
-            </tr>
-            <tr>
-                <th colspan="3">SPODNIE</th>
-                <th colspan="3">KOSZULE</th>
+<body style="padding: 0;margin: 0;font-family: calibri;background-color: rgb(204, 203, 203);">
+    <table
+    width="600px"
+    border="0"
+    cellspacing="0"
+    cellpading="0"
+    style="background-color: #FFF;display: block;max-width: 600px;table-layout: fixed;"
+    align="center">
+        <thead style="padding: 0;margin: 0;max-width: 600px;max-height: 94px;display: block;">
+            <tr style="padding: 0;margin: 0;max-width: 600px;max-height: 94px;display: block;">
+                <td style="padding: 0;margin: 0;max-width: 600px;max-height: 94px;display: block;">                
+                    <img src="logos.jpg" alt="Logo" height="94px" width="600px" style="border: 0;display: block;margin: 0;"/>
+                </td>
             </tr>
         </thead>
-        <tbody>
-            <tr>
-                <td>Mężczyźni</td>
-                <td>48</td>
-                <td>50</td>
-                <td>52</td>
-                <td>M</td>
-                <td>L</td>
-                <td>XL</td>
-                <td>-</td>
+        <tbody bgcolor="#2d3e87" style="padding: 0;margin: 0;max-width: 600px;width: 100%;display: block;">
+            <tr height="56px" width="600px" style="padding: 0;margin: 0;max-width: 600px;">
+                <td colspan="6" width="328">&nbsp;</td>
+                <td colspan="3" rowspan="4" height="209px" width="228px" valign="top">
+                    <img src="arrows_bg.jpg" alt="Kliknij aby pobrać zdjecie" height="209px" width="272px" style="border: 0;display: block;margin: 0;"/>
+                </td>
+            </tr>
+            <tr height="19px">
+                <td rowspan="9" width="45px" height="337px">&nbsp;</td>
+                <td colspan="5" height="19px">
+                    <span style="font-size: 16px;color: #289DD8;">
+                        LIVE FREE WEBINAR
+                    </span></td>
+            </tr>
+            <tr height="15">
+                <td colspan="5"></td>
+            </tr>
+            <tr height="134px">
+                <td colspan="5" rowspan="1" valign="top" height="150px">
+                    <span style="font-size: 27px;font-weight: bold;color: #FFF;">
+                        10 the most important tips in upgrading your corporate SITECORE system
+                    </span>
+                </td>
             </tr>
             <tr>
-                <td>Kobiety</td>
-                <td>36</td>
-                <td>38</td>
-                <td>40</td>
-                <td>S</td>
-                <td>M</td>
-                <td>L</td>
-                <td rowspan="2">0%</td>
+                <td colspan="8">
+                    <span style="font-size: 16px;font-weight: lighter;color: #FFF;">
+                        Are you thinking about Sitecore Upgrading?<br> 
+                        Do you want to do it correctly and safely? Join our webinar!
+                    </span>
+                </td>
+            </tr>
+            <tr height="26px">
+                <td colspan="8">&nbsp;</td>
             </tr>
             <tr>
-                <td>Dzieci</td>
-                <td>90/50</td>
-                <td>98/56</td>
-                <td>110/60</td>
-                <td>116/62</td>
-                <td>122/64</td>
-                <td>126/68</td>
+                <td rowspan="2" width="22px">
+                    <img src="Icon feather-calendar@2x.png" alt="Kliknij aby pobrać zdjecie" height="22px" width="22px" style="border: 0;display: block;margin: 0;"/>
+                </td>
+                <td colspan="4" valign="bottom">
+                    <span style="font-size: 16px;font-weight: lighter;color: #FFF;">
+                        On Thursday,
+                    </span>
+                </td>
+                <td colspan="2">&nbsp;</td>
+                <td rowspan="4">&nbsp;</td>
+            </tr>
+            <tr>
+                <td colspan="4" valign="top">
+                    <span style="font-size: 16px;font-weight: lighter;color: #FFF;">
+                        October 14, 2021 | 11am PT (?)
+                    </span>
+                </td>
+                <td colspan="2" rowspan="2">
+                    <a href="#" target="_blank"><img src="Group 2392@2x.png" alt="Kliknij aby pobrać zdjecie" height="51px" width="220px" style="border: 0;display: block;margin: 0;"/></a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img src="Icon feather-clock@2x.png" alt="Kliknij aby pobrać zdjecie" height="22px" width="22px" style="border: 0;display: block;margin: 0;"/>
+                </td>
+                <td colspan="4">
+                    <span style="font-size: 16px;font-weight: lighter;color: #FFF;">Approximately 60 minutes (?)</span>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="8" height="45px">&nbsp;</td>
             </tr>
         </tbody>
+        <!-- white -->
+        <tbody bgcolor="#FFF" style="padding: 0;margin: 0;max-width: 600px;width: 100%;display: block;">
+            <tr>
+                <td colspan="2" rowspan="11" width="45px">&nbsp;</td>
+                <td colspan="5" height="45px">&nbsp;</td>
+                <td colspan="2" rowspan="11" style="max-width:41px;">&nbsp;</td>
+            </tr>
+            <tr height="93px">
+                <td width="150px" style="min-width: 150px;">
+                    <span style="font-size: 27px;font-weight: bold;color: black;">
+                        During our<br> webinar you<br> will learn
+                    </span>
+                </td>
+                <td width="20px">&nbsp;</td>
+                <td align="center" width="160px" style="min-width: 160px;">
+                    <img src="Group 2390@2x.png" alt="Kliknij aby pobrać zdjecie" height="70px" width="70px" style="border: 0;display: block;margin: 0;"/>
+                </td>
+                <td rowspan="2" width="19px"></td>
+                <td align="center" width="160px" style="min-width: 160px;">
+                    <img src="Group 2391@2x.png" alt="Kliknij aby pobrać zdjecie" height="70px" width="70px" style="border: 0;display: block;margin: 0;"/>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2">&nbsp;</td>
+                <td style="text-align: center;" valign="top">
+                    <span style="font-size: 16px;color: black;font-weight: lighter;">
+                        How to obey errors, mistakes and conduct the update smoothly in a trackable way
+                    </span>
+                </td>
+                <td style="text-align: center;" valign="top">
+                    <span style="font-size: 16px;color: black;font-weight: lighter;">
+                        What are Steps and tips which are the MUST for CTOs and SITECORE
+                    </span>
+                </td>
+            </tr>
+            <tr height="37px">
+                <td colspan="5">&nbsp;</td>
+            </tr>
+            <tr>
+                <td colspan="5">
+                    <span style="font-size: 18px; font-weight: bold; color: black;">
+                        We will host live Q&A session, so we will answer all your questions.
+                    </span>
+                </td>
+            </tr>
+            <tr height="41px">
+                <td colspan="5">&nbsp;</td>
+            </tr>
+            <tr>
+                <td>
+                    <span style="font-size: 27px; font-weight: bold; color: black;">
+                        Our speakers
+                    </span>
+                </td>
+                <td colspan="4">&nbsp;</td>
+            </tr>
+            <tr height="30px">
+                <td>&nbsp;</td>
+                <td rowspan="3">&nbsp;</td>
+                <td colspan="3">&nbsp;</td>
+            </tr>
+            <tr>
+                <td>
+                    <img src="arek_s.png" alt="Kliknij, aby pobrać zdjęcie" height="140px" width="147" style="border: 0;display: block;margin: 0;"/>
+                </td>
+                <td>
+                    <img src="adam_c.png" alt="Kliknij, aby pobrać zdjęcie" height="140px" width="147" style="border: 0;display: block;margin: 0;"/>
+                </td>
+                <td rowspan="2">&nbsp;</td>
+                <td>
+                    <img src="julia_g.png" alt="Kliknij, aby pobrać zdjęcie" height="140px" width="147" style="border: 0;display: block;margin: 0;"/>
+                </td>
+            </tr>
+            <tr>
+                <td valign="top" style="text-align: center;">
+                    <span style="font-size: 16px; font-weight: lighter;">
+                        <b style="font-size: 18px;">Arek Skuza</b><br>
+                        Accomplished leader with 15+ years of experience
+                    </span>
+                </td>
+                <td valign="top" style="text-align: center;">
+                    <span style="font-size: 16px; font-weight: lighter;">
+                        <b style="font-size: 18px;">Adam Cieśluk</b><br>
+                        Adam has 16 years of experience in .NET technology.
+                    </span>
+                </td>
+                <td valign="top" style="text-align: center;">
+                    <span style="font-size: 16px; font-weight: lighter;">
+                        <b style="font-size: 18px;">Julia Roberts</b><br>
+                        Julia has 16 years of experience in .NET (?)
+                    </span>
+                </td>
+            </tr>
+            <tr height="55px">
+                <td colspan="5">&nbsp;</td>
+            </tr>
+        </tbody>
+        <!-- blue -->
+        <tbody bgcolor="#216EBA" style="padding: 0;margin: 0;max-width: 600px;width: 100%;display: block;">
+            <tr height="47.5px">
+                <td colspan="3" rowspan="5" width="144.5px">&nbsp;</td>
+                <td colspan="3">&nbsp;</td>
+                <td colspan="3" rowspan="5" width="144.5px">&nbsp;</td>
+            </tr>
+            <tr height="61px">
+                <td colspan="3" style="text-align: center;" width="311px">
+                    <span style="font-size: 25px; font-weight: bold;color: white;">
+                        Don't wait and save your spot right now (?)
+                    </span>
+                </td>
+            </tr>
+            <tr height="19.5px">
+                <td colspan="3">&nbsp;</td>
+            </tr>
+            <tr align="center">
+                <td colspan="3">
+                    <a href="#" target="_blank">
+                        <img src="register.png" alt="Register For Free" width="220px" height="51px" style="border: 0;display: block;margin: 0;">
+                    </a>
+                </td>
+            </tr>
+            <tr height="46px">
+                <td colspan="3">&nbsp;</td>
+            </tr>
+        </tbody>
+        <!-- footer -->
         <tfoot>
-            <tr>            
-                <td colspan="8">Podane rozmiary są rozmiarami zewnętrznymi</td>
+            <tr height="20px">
+                <td colspan="3" rowspan="2" width="60px">&nbsp;</td>
+                <td colspan="3">&nbsp;</td>
+                <td colspan="3" rowspan="2" width="60px">&nbsp;</td>
+            </tr>
+            <tr height="120px" valign="top">
+                <td colspan="3" width="479px" height="17px" style="text-align:center;">
+                    <span style="font-size: 12px;color: #838383;">
+                        LEGAL (unsubscribe etc.)
+                    </span>
+                </td>
             </tr>
         </tfoot>
     </table>
