--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     border="0"
     cellspacing="0"
     cellpading="0"
-    style="background-color: #FFF;display: block;max-width: 600px;table-layout: fixed;"
+    style="background-color: #FFFFFF;display: block;max-width: 600px;table-layout: fixed;"
     align="center">
         <thead style="padding: 0;margin: 0;max-width: 600px;max-height: 94px;display: block;">
             <tr style="padding: 0;margin: 0;max-width: 600px;max-height: 94px;display: block;">
@@ -39,14 +39,14 @@
             </tr>
             <tr height="134px">
                 <td colspan="5" rowspan="1" valign="top" height="150px">
-                    <span style="font-size: 27px;font-weight: bold;color: #FFF;">
+                    <span style="font-size: 27px;font-weight: bold;color: #FFFFFF;">
                         10 the most important tips in upgrading your corporate SITECORE system
                     </span>
                 </td>
             </tr>
             <tr>
                 <td colspan="8">
-                    <span style="font-size: 16px;font-weight: lighter;color: #FFF;">
+                    <span style="font-size: 16px;font-weight: lighter;color: #FFFFFF;">
                         Are you thinking about Sitecore Upgrading?<br> 
                         Do you want to do it correctly and safely? Join our webinar!
                     </span>
@@ -57,10 +57,10 @@
             </tr>
             <tr>
                 <td rowspan="2" width="22px">
-                    <img src="Icon feather-calendar@2x.png" alt="Kliknij aby pobrać zdjecie" height="22px" width="22px" style="border: 0;display: block;margin: 0;"/>
+                    <img src="feather-calendar@2x.png" alt="Kliknij aby pobrać zdjecie" height="22px" width="22px" style="border: 0;display: block;margin: 0;"/>
                 </td>
                 <td colspan="4" valign="bottom">
-                    <span style="font-size: 16px;font-weight: lighter;color: #FFF;">
+                    <span style="font-size: 16px;font-weight: lighter;color: #FFFFFF;">
                         On Thursday,
                     </span>
                 </td>
@@ -69,20 +69,20 @@
             </tr>
             <tr>
                 <td colspan="4" valign="top">
-                    <span style="font-size: 16px;font-weight: lighter;color: #FFF;">
+                    <span style="font-size: 16px;font-weight: lighter;color: #FFFFFF;">
                         October 14, 2021 | 11am PT (?)
                     </span>
                 </td>
                 <td colspan="2" rowspan="2">
-                    <a href="#" target="_blank"><img src="Group 2392@2x.png" alt="Kliknij aby pobrać zdjecie" height="51px" width="220px" style="border: 0;display: block;margin: 0;"/></a>
+                    <a href="#" target="_blank"><img src="Group2392@2x.png" alt="Kliknij aby pobrać zdjecie" height="51px" width="220px" style="border: 0;display: block;margin: 0;"/></a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <img src="Icon feather-clock@2x.png" alt="Kliknij aby pobrać zdjecie" height="22px" width="22px" style="border: 0;display: block;margin: 0;"/>
+                    <img src="feather-clock@2x.png" alt="Kliknij aby pobrać zdjecie" height="22px" width="22px" style="border: 0;display: block;margin: 0;"/>
                 </td>
                 <td colspan="4">
-                    <span style="font-size: 16px;font-weight: lighter;color: #FFF;">Approximately 60 minutes (?)</span>
+                    <span style="font-size: 16px;font-weight: lighter;color: #FFFFFF;">Approximately 60 minutes (?)</span>
                 </td>
             </tr>
             <tr>
@@ -90,7 +90,7 @@
             </tr>
         </tbody>
         <!-- white -->
-        <tbody bgcolor="#FFF" style="padding: 0;margin: 0;max-width: 600px;width: 100%;display: block;">
+        <tbody bgcolor="#FFFFFF" style="padding: 0;margin: 0;max-width: 600px;width: 100%;display: block;">
             <tr>
                 <td colspan="2" rowspan="11" width="45px">&nbsp;</td>
                 <td colspan="5" height="45px">&nbsp;</td>
@@ -104,11 +104,11 @@
                 </td>
                 <td width="20px">&nbsp;</td>
                 <td align="center" width="160px" style="min-width: 160px;">
-                    <img src="Group 2390@2x.png" alt="Kliknij aby pobrać zdjecie" height="70px" width="70px" style="border: 0;display: block;margin: 0;"/>
+                    <img src="Group2390@2x.png" alt="Kliknij aby pobrać zdjecie" height="70px" width="70px" style="border: 0;display: block;margin: 0;"/>
                 </td>
                 <td rowspan="2" width="19px"></td>
                 <td align="center" width="160px" style="min-width: 160px;">
-                    <img src="Group 2391@2x.png" alt="Kliknij aby pobrać zdjecie" height="70px" width="70px" style="border: 0;display: block;margin: 0;"/>
+                    <img src="Group2391@2x.png" alt="Kliknij aby pobrać zdjecie" height="70px" width="70px" style="border: 0;display: block;margin: 0;"/>
                 </td>
             </tr>
             <tr>
