--- a/index copy.html
+++ b/index copy.html
@@ -10,13 +10,13 @@
         width="600"
         cellspacing="0"
         border="0"
-        cellpading="0"
-        style="background-color: #FFFFFF;"
+        cellpadding="0"
+        style="background-color: #FFFFFF; border-collapse: collapse;"
         align="center">
             <tbody style="padding: 0;margin: 0; width: 100%;">
                 <tr>
                     <td colspan="3" style="padding: 0;margin: 0; border: 0;">                
-                        <img src="logos.jpg" alt="Logo" height="94" width="600" style="border: 0;display: block;margin: 0;"/>
+                        <img src="https://i.postimg.cc/ZRCZ3J1V/logos.jpg" alt="Logo" height="94" width="600" style="border: 0;display: block;margin: 0;"/>
                     </td>
                 </tr>
                 <!-- Blue section -->
@@ -29,14 +29,14 @@
                         cellspacing="0"
                         width="100%"
                         border="0"
-                        cellpading="0"
-                        style="padding: 0;margin: 0;background-color: #2d3e87;">
+                        cellpadding="0"
+                        style="padding: 0;margin: 0;background-color: #2d3e87; border-collapse: collapse;">
                             <tr>
                                 <td colspan="3" width="230" style="padding: 0">
                                     &nbsp;
                                 </td>
                                 <td colspan="2" rowspan="4" height="209" width="275" valign="top" style="padding: 0" align="right">
-                                    <img src="arrows_bg.png" alt="Kliknij aby pobrać zdjecie" height="209" width="272" style="border: 0;display: block;margin: 0;"/>
+                                    <img src="https://i.postimg.cc/FH7Fgjbc/arrows-bg.png" alt="Kliknij aby pobrać zdjecie" height="209" width="272" style="border: 0;display: block;margin: 0;"/>
                                 </td>
                             </tr>
                             <tr>
@@ -78,7 +78,7 @@
                             </tr>
                             <tr>
                                 <td rowspan="2" width="25" style="padding: 0">
-                                    <img src="feather-calendar@2x.png" alt="Kliknij aby pobrać zdjecie" height="22" width="22" style="border: 0;display: block;margin: 0;"/>
+                                    <img src="https://i.postimg.cc/59D9BF9v/feather-calendar-2x.png" alt="Kliknij aby pobrać zdjecie" height="22" width="22" style="border: 0;display: block;margin: 0;"/>
                                 </td>
                                 <td width="14" style="padding: 0">
                                     &nbsp;
@@ -100,13 +100,13 @@
                                 </td>
                                 <td rowspan="2" colspan="2" style="padding: 0" width="270" align="center">
                                     <a href="#" target="_blank">
-                                        <img src="Group2392@2x.png" alt="Kliknij aby pobrać zdjecie" height="51" width="220" style="border: 0;display: block;margin: 0;"/>
+                                        <img src="https://i.postimg.cc/cLSsjynL/Group2392-2x.png" alt="Kliknij aby pobrać zdjecie" height="51" width="220" style="border: 0;display: block;margin: 0;"/>
                                     </a>
                                 </td>
                             </tr>
                             <tr>
                                 <td style="padding: 0" width="25">
-                                    <img src="feather-clock@2x.png" alt="Kliknij aby pobrać zdjecie" height="22" width="22" style="border: 0;display: block;margin: 0;"/>
+                                    <img src="https://i.postimg.cc/XvNnjfxM/feather-clock-2x.png" alt="Kliknij aby pobrać zdjecie" height="22" width="22" style="border: 0;display: block;margin: 0;"/>
                                 </td>
                                 <td width="14" style="padding: 0">
                                     &nbsp;
@@ -134,7 +134,7 @@
                         <table
                         cellspacing="0"
                         border="0"
-                        cellpading="0">
+                        cellpadding="0">
                             <tr>
                                 <td colspan="3" height="45">
                                     &nbsp;
@@ -147,10 +147,10 @@
                                     </span>
                                 </td>
                                 <td align="center" width="160" style="min-width: 160;">
-                                    <img src="Group2390@2x.png" alt="Kliknij aby pobrać zdjecie" height="70" width="70" style="border: 0;display: block;margin: 0;"/>
+                                    <img src="https://i.postimg.cc/nLdpCXwX/Group2390-2x.png" alt="Kliknij aby pobrać zdjecie" height="70" width="70" style="border: 0;display: block;margin: 0;"/>
                                 </td>
                                 <td align="center" width="160" style="min-width: 160;">
-                                    <img src="Group2391@2x.png" alt="Kliknij aby pobrać zdjecie" height="70" width="70" style="border: 0;display: block;margin: 0;"/>
+                                    <img src="https://i.postimg.cc/zXWz0X3Q/Group2391-2x.png" alt="Kliknij aby pobrać zdjecie" height="70" width="70" style="border: 0;display: block;margin: 0;"/>
                                 </td>
                             </tr>
                             <tr>
@@ -195,13 +195,13 @@
                             </tr>
                             <tr>
                                 <td align="center">
-                                    <img src="arek_s.png" alt="Kliknij, aby pobrać zdjęcie" height="140" width="147" style="border: 0;display: block;margin: 0;"/>
+                                    <img src="https://i.postimg.cc/G34hTjRd/arek-s.png" alt="Kliknij, aby pobrać zdjęcie" height="140" width="147" style="border: 0;display: block;margin: 0;"/>
                                 </td>
                                 <td align="center">
-                                    <img src="adam_c.png" alt="Kliknij, aby pobrać zdjęcie" height="140" width="147" style="border: 0;display: block;margin: 0;"/>
+                                    <img src="https://i.postimg.cc/J0fFs8LD/adam-c.png" alt="Kliknij, aby pobrać zdjęcie" height="140" width="147" style="border: 0;display: block;margin: 0;"/>
                                 </td>
                                 <td align="center">
-                                    <img src="julia_g.png" alt="Kliknij, aby pobrać zdjęcie" height="140" width="147" style="border: 0;display: block;margin: 0;"/>
+                                    <img src="https://i.postimg.cc/nzgxG6xZ/julia-g.png" alt="Kliknij, aby pobrać zdjęcie" height="140" width="147" style="border: 0;display: block;margin: 0;"/>
                                 </td>
                             </tr>
                             <tr>
@@ -242,7 +242,7 @@
                         <table
                         cellspacing="0"
                         border="0"
-                        cellpading="0">
+                        cellpadding="0">
                             <tr height="47.5">
                                 <td colspan="3" rowspan="5" width="99.5">&nbsp;</td>
                                 <td colspan="3">&nbsp;</td>
@@ -261,7 +261,7 @@
                             <tr align="center">
                                 <td colspan="3">
                                     <a href="#" target="_blank">
-                                        <img src="register.png" alt="Register For Free" width="220" height="51" style="border: 0;display: block;margin: 0;">
+                                        <img src="https://i.postimg.cc/L5PpCN4P/register.png" alt="Register For Free" width="220" height="51" style="border: 0;display: block;margin: 0;">
                                     </a>
                                 </td>
                             </tr>
